# benchkit_for_harnesses

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md  harnesses.md  output.md
src/benchkit_for_harnesses/: __init__.py  api_runner.py  archive.py  brackets.py  cli.py  core.py  ledger.py  responders.py  results.py  runner.py
src/benchkit_for_harnesses/benchmarks/: __init__.py  config.py
src/benchkit_for_harnesses/bundled_bench/: __init__.py  experiment.py  harness.py  models.py  questions.py  run.py  runner.py
src/benchkit_for_harnesses/harnesses/: __init__.py  dispatch.py  runner.py
src/benchkit_for_harnesses/ifeval/: __init__.py  checkers.py  experiment.py  mock.py  prompts.py  types.py
test_results/: babilong_ohp_anthropic_claude-opus-4-6_v1_20260414T113543NYC_5a7e2b79f413.jsonl  babilong_ohp_claude-3-5-haiku_v1_20260413T170606NYC_62da2659d224.jsonl  babilong_ohp_claude-opus-4_v1_20260414T113402NYC_deaf9b10cd3f.jsonl
tests/: __init__.py  test_archive.py  test_brackets.py  test_checkers.py  test_cli.py  test_harness_adapters.py  test_ledger.py
typings/datasets/: __init__.pyi
typings/httpx/: __init__.pyi
typings/langdetect/: __init__.pyi
